--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
 
     <main>
         <!-- OUR DESTINATIONS start -->
-        <section class="OUR DESTINATIONS">
+        <section class="OUR-DESTINATIONS">
+            <h1 class="section-titel">OUR DESTINATIONS</h1>
+
+            <div class="cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
 
         </section>
         <!-- OUR DESTINATIONS end -->
