--- a/index.html
+++ b/index.html
@@ -67,14 +67,54 @@
 
         </section>
         <!-- OUR DESTINATIONS end -->
-        <!-- Your Next Holiday start -->
-        <section class="Your Next Holiday">
 
+        <!-- Your Next Holiday start -->
+        <section class="Your-Next-Holiday">
+            <div class="hollyday">
+                <div class="holly-text">
+                    <h1>
+                        Your
+                        Next Holiday</h1>
+                </div>
+                <div class="holly-button">
+                    <button type="submit"> VIEW ALL PACKAGES</button>
+                </div>
+            </div>
         </section>
         <!-- Your Next Holiday end -->
 
         <!-- The Best Beaches start -->
-        <section class="The Best Beaches">
+        <section class="The-Best-Beaches">
+            <div class="beach-titel">
+
+                <h1>The Best Beaches</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia autem similique placeat commodi
+                    iusto, unde totam omnis perferendis ratione quo! Debitis voluptas consectetur reiciendis placeat
+                    possimus doloremque molestias voluptatum minima!</p>
+                <div class="btn-2"> <button type="submit">BOOK NOW</button></div>
+
+            </div>
+            <div class="beach-img">
+                <img src="photo/beach.jpg" alt="">
+            </div>
+
+            <div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                    <a href=""></a>
+                </div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                    <a href=""></a>
+                </div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                    <a href=""></a>
+                </div>
+            </div>
 
         </section>
         <!-- The Best Beaches end-->
