--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
         <!-- Your Next Holiday start -->
         <section class="Your-Next-Holiday">
+
             <div class="hollyday">
                 <div class="holly-text">
                     <h1>
@@ -98,33 +99,132 @@
                 <img src="photo/beach.jpg" alt="">
             </div>
 
-            <div>
+        </section>
+
+        <!-- The Best Beaches end-->
+
+        <!-- ture section start -->
+        <section class="service-iteam">
+            <div class="service">
                 <div>
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
+                    <h1>World Tour</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, fugiat!</p>
+                    <a href="#">view more</a>
                 </div>
                 <div>
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
+                    <h1>Cruises</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, facilis!</p>
+                    <a href="#">view more</a>
                 </div>
                 <div>
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
+                    <h1>Best Tours</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, corrupti.</p>
+                    <a href="#">view more</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- ture section end -->
+
+        <!-- discover start -->
+        <section class="discover">
+
+            <div class="cites">
+                <div class="city-text">
+                    <p>01. LAST MINUTE</p>
+                    <h1>
+                        Discover Cities
+                    </h1>
+                    <button type="submit">DETAIL</button>
+                </div>
+            </div>
+            <div class="naturs">
+                <div class="nature-text">
+                    <p>02. PROMOTIONS</p>
+                    <h1>Discover Nature</h1>
+                    <button type="submit">DETAIL</button>
                 </div>
             </div>
 
         </section>
-        <!-- The Best Beaches end-->
-        <!-- discover start -->
-        <section class="discover">
-
-        </section>
         <!-- discover end -->
-        <section class="OUR PACKAGES">
 
+        <section class="OUR-PACKAGES-SECTION">
+            <h1 class="section-titel">OUR PACKAGES</h1>
+            <div class="OUR-PACKAGES">
+                <div class="PACKAGES-CARD">
+                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div>
+                        <a href="#">BERLIN</a>
+                        <p> @ europ</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <div>
+                            <p><a href="#">CULTURAL RELAX</a></p>
+                        </div>
+                        <div>
+                            <h1>700$</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
+                            praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
+                            voluptatibus consequatur facilis labore modi!
+                        </p> <br>
+                        <button type="submit">DETAILS</button>
+                    </div>
+                </div>
+                <div class="PACKAGES-CARD">
+                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div>
+                        <a href="#">BERLIN</a>
+                        <p> @ europ</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <div>
+                            <p><a href="#">CULTURAL RELAX</a></p>
+                        </div>
+                        <div>
+                            <h1>700$</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
+                            praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
+                            voluptatibus consequatur facilis labore modi!
+                        </p> <br>
+                        <button type="submit">DETAILS</button>
+                    </div>
+                </div>
+                <div class="PACKAGES-CARD">
+                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div>
+                        <a href="#">BERLIN</a>
+                        <p> @ europ</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <div>
+                            <p><a href="#">CULTURAL RELAX</a></p>
+                        </div>
+                        <div>
+                            <h1>700$</h1>
+                        </div>
+                    </div>
+                    <hr>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
+                            praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
+                            voluptatibus consequatur facilis labore modi!
+                        </p> <br>
+                        <button type="submit">DETAILS</button>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="end"></section>
