--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <p> @ europ</p>
                     </div>
                     <hr>
-                    <div>
+                    <div class="relax">
                         <div>
                             <p><a href="#">CULTURAL RELAX</a></p>
                         </div>
@@ -183,7 +183,7 @@
                         <p> @ europ</p>
                     </div>
                     <hr>
-                    <div>
+                    <div class="relax">
                         <div>
                             <p><a href="#">CULTURAL RELAX</a></p>
                         </div>
@@ -207,7 +207,7 @@
                         <p> @ europ</p>
                     </div>
                     <hr>
-                    <div>
+                    <div class="relax">
                         <div>
                             <p><a href="#">CULTURAL RELAX</a></p>
                         </div>
@@ -227,7 +227,64 @@
             </div>
         </section>
 
-        <section class="end"></section>
+        <section class="end">
+            <div class="ending-head">
+                <div class="ending-title">
+                    <p>KEEP IN TOUCH</p>
+                    <H1>Travel With Us</H1>
+                </div>
+                <div>
+                    <input type="text" value=""> <button>SEND</button>
+                </div>
+            </div>
+
+            <div class="ending-banar">
+                <div class="end-discription">
+
+
+                    <img class="logo" src="photo/logo.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laboriosam illum, rerum eaque
+                        at
+                        ratione labore, dolore, molestiae nobis tempore minima aspernatur quae vel cum beatae
+                        voluptate?
+                        Odio, reiciendis quibusdam.</p>
+                    <span>facebook</span> <span>insta</span> <span>twter</span> <span>googl+</span>
+
+                </div>
+                <div class="end-nav">
+                    <div class="our-agency">
+                        <ul>
+                            <h3>OUR AGENCY</h3>
+                            <li>.Services</li>
+                            <li>Insurancee</li>
+                            <li>Agency</li>
+                            <li>tourism</li>
+                            <li>Payment</li>
+                        </ul>
+                    </div>
+                    <div class="parents">
+                        <ul>
+                            <h3>PARTNERS</h3>
+                            <li>Booking</li>
+                            <li>RentalCar</li>
+                            <li>HostelWorld</li>
+                            <li>Trivago</li>
+                            <li>TripAdvisor</li>
+                        </ul>
+                    </div>
+                    <div class="last-minute">
+                        <ul>
+                            <h3>LAST MINUTE</h3>
+                            <li> London</li>
+                            <li> California</li>
+                            <li>Indonesia</li>
+                            <li>Europe</li>
+                            <li>Oceania</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
