--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <h1 class="section-titel">OUR DESTINATIONS</h1>
 
             <div class="cards">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card-1"></div>
+                <div class="card-2"></div>
+                <div class="card-3"></div>
+                <div class="card-4"></div>
+                <div class="card-5"></div>
+                <div class="card-6"></div>
             </div>
 
         </section>
