--- a/index.html
+++ b/index.html
@@ -57,12 +57,24 @@
             <h1 class="section-titel">OUR DESTINATIONS</h1>
 
             <div class="cards">
-                <div class="card-1"></div>
-                <div class="card-2"></div>
-                <div class="card-3"></div>
-                <div class="card-4"></div>
-                <div class="card-5"></div>
-                <div class="card-6"></div>
+                <div class="card-1">
+                    <h1>Europe</h1>
+                </div>
+                <div class="card-2">
+                    <h1>Thailandia</h1>
+                </div>
+                <div class="card-3">
+                    <h1>Asia</h1>
+                </div>
+                <div class="card-4">
+                    <h1>Singapur</h1>
+                </div>
+                <div class="card-5">
+                    <h1>Netherlands</h1>
+                </div>
+                <div class="card-6">
+                    <h1>The USA</h1>
+                </div>
             </div>
 
         </section>
@@ -153,10 +165,10 @@
             <h1 class="section-titel">OUR PACKAGES</h1>
             <div class="OUR-PACKAGES">
                 <div class="PACKAGES-CARD">
-                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div class="PACKAGES-lmg"><img src="photo/contry/berlin.jpg" alt=""></div>
                     <div>
                         <a href="#">BERLIN</a>
-                        <p> @ europ</p>
+                        <p> @ Europ</p>
                     </div>
                     <hr>
                     <div class="relax">
@@ -177,10 +189,10 @@
                     </div>
                 </div>
                 <div class="PACKAGES-CARD">
-                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div class="PACKAGES-lmg"><img src="photo/contry/hongkong.jpg" alt=""></div>
                     <div>
-                        <a href="#">BERLIN</a>
-                        <p> @ europ</p>
+                        <a href="#">Hong Kong</a>
+                        <p> @ Asia</p>
                     </div>
                     <hr>
                     <div class="relax">
@@ -201,10 +213,10 @@
                     </div>
                 </div>
                 <div class="PACKAGES-CARD">
-                    <div class="PACKAGES-lmg"><img src="photo/place/pic-1.png" alt=""></div>
+                    <div class="PACKAGES-lmg"><img src="photo/contry/san.jpg" alt=""></div>
                     <div>
-                        <a href="#">BERLIN</a>
-                        <p> @ europ</p>
+                        <a href="#">San Francisco</a>
+                        <p> @ US</p>
                     </div>
                     <hr>
                     <div class="relax">
