--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="hollyday">
                 <div class="holly-text">
                     <h1>
-                        Your
+                        Your <br>
                         Next Holiday</h1>
                 </div>
                 <div class="holly-button">
@@ -118,17 +118,17 @@
         <!-- ture section start -->
         <section class="service-iteam">
             <div class="service">
-                <div>
+                <div id="service-container">
                     <h1>World Tour</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, fugiat!</p>
                     <a href="#">view more</a>
                 </div>
-                <div>
+                <div id="service-container">
                     <h1>Cruises</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, facilis!</p>
                     <a href="#">view more</a>
                 </div>
-                <div>
+                <div id="service-container">
                     <h1>Best Tours</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, corrupti.</p>
                     <a href="#">view more</a>
@@ -166,7 +166,8 @@
             <div class="OUR-PACKAGES">
                 <div class="PACKAGES-CARD">
                     <div class="PACKAGES-lmg"><img src="photo/contry/berlin.jpg" alt=""></div>
-                    <div>
+
+                    <div id="packag-head-test">
                         <a href="#">BERLIN</a>
                         <p> @ Europ</p>
                     </div>
@@ -180,7 +181,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div>
+                    <div id="packag-end-test">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
                             praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
                             voluptatibus consequatur facilis labore modi!
@@ -190,7 +191,7 @@
                 </div>
                 <div class="PACKAGES-CARD">
                     <div class="PACKAGES-lmg"><img src="photo/contry/hongkong.jpg" alt=""></div>
-                    <div>
+                    <div id="packag-head-test">
                         <a href="#">Hong Kong</a>
                         <p> @ Asia</p>
                     </div>
@@ -204,7 +205,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div>
+                    <div id="packag-end-test">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
                             praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
                             voluptatibus consequatur facilis labore modi!
@@ -214,7 +215,7 @@
                 </div>
                 <div class="PACKAGES-CARD">
                     <div class="PACKAGES-lmg"><img src="photo/contry/san.jpg" alt=""></div>
-                    <div>
+                    <div id="packag-head-test">
                         <a href="#">San Francisco</a>
                         <p> @ US</p>
                     </div>
@@ -228,7 +229,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div>
+                    <div id="packag-end-test">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quia, nam voluptates, hic
                             praesentium fuga eveniet debitis aspernatur culpa esse vero ratione excepturi tenetur magnam
                             voluptatibus consequatur facilis labore modi!
@@ -245,7 +246,7 @@
                     <p>KEEP IN TOUCH</p>
                     <H1>Travel With Us</H1>
                 </div>
-                <div>
+                <div class="input">
                     <input type="text" value=""> <button>SEND</button>
                 </div>
             </div>
