--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>travl</title>
     <!-- style -->
     <link rel="stylesheet" href="style.css">
+    <!-- font -->
+    <script src="https://kit.fontawesome.com/8ffccad2bd.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -38,8 +40,8 @@
 
 
             <h1>Search your next Holiday</h1>
-            <h3>CHECK OUR BEST PROMOTIONS</h3>
-            <input type="text" placeholder="enter" value="">
+            <p>CHECK OUR BEST PROMOTIONS</p>
+            <input type="text" placeholder="choose your destination......." value="">
             <div class="box-container">
                 <div class="box">box-1</div>
                 <div class="box">box-2</div>
@@ -261,7 +263,11 @@
                         ratione labore, dolore, molestiae nobis tempore minima aspernatur quae vel cum beatae
                         voluptate?
                         Odio, reiciendis quibusdam.</p>
-                    <span>facebook</span> <span>insta</span> <span>twter</span> <span>googl+</span>
+                    <div class="span"> <span><i class="fab fa-facebook-square"></i></span> | <span><i
+                                class="fab fa-twitter-square"></i></span> |<span><i
+                                class="fab fa-google-plus-g"></i></span>|
+                        <span><i class="fab fa-instagram"></i></span>
+                    </div>
 
                 </div>
                 <div class="end-nav">
