--- a/index.html
+++ b/index.html
@@ -59,24 +59,67 @@
             <h1 class="section-titel">OUR DESTINATIONS</h1>
 
             <div class="cards">
-                <div class="card-1">
-                    <h1>Europe</h1>
+                <div class="card">
+                    <img src="photo/contry/italy.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a href="#">GO TO</a>
+                    </div>
                 </div>
-                <div class="card-2">
-                    <h1>Thailandia</h1>
+                <div class="card">
+                    <img src="photo/contry/holly.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a href="#">GO TO</a>
+                    </div>
                 </div>
-                <div class="card-3">
-                    <h1>Asia</h1>
+                <div class="card">
+                    <img src="photo/contry/hongkong.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a class="btn" href="#">GO TO</a>
+                    </div>
                 </div>
-                <div class="card-4">
-                    <h1>Singapur</h1>
+                <div class="card">
+                    <img src="photo/contry/nland.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a class="btn" href="#">GO TO</a>
+                    </div>
                 </div>
-                <div class="card-5">
-                    <h1>Netherlands</h1>
+                <div class="card">
+                    <img src="photo/contry/pexels-adhitya-andanu-1561863.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a class="btn" href="#">GO TO</a>
+                    </div>
                 </div>
-                <div class="card-6">
-                    <h1>The USA</h1>
+                <div class="card">
+                    <img src="photo/contry/pexels-pixabay-460376.jpg" alt="">
+                    <div class="card-info">
+                        <h1>head</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error nihil quia, quaerat tempora
+                            culpa quos ut corporis dolorem, illo ratione esse eveniet id atque quae cupiditate sequi
+                            veniam similique totam!</p>
+                        <a class="btn" href="#">GO TO</a>
+                    </div>
                 </div>
+
             </div>
 
         </section>
