--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- font -->
     <script src="https://kit.fontawesome.com/8ffccad2bd.js" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="bootstrap.css">
+
 </head>
 
 <body>
@@ -55,11 +57,11 @@
 
     <main>
         <!-- OUR DESTINATIONS start -->
-        <section class="OUR-DESTINATIONS">
+        <section class="OUR-DESTINATIONS border container-fluid  ">
             <h1 class="section-titel">OUR DESTINATIONS</h1>
 
-            <div class="cards">
-                <div class="card">
+            <div class="cards row d-flex justify-content-center ">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12">
                     <img src="photo/contry/italy.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
@@ -69,7 +71,7 @@
                         <a href="#">GO TO</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12">
                     <img src="photo/contry/holly.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
@@ -79,7 +81,7 @@
                         <a href="#">GO TO</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12 ">
                     <img src="photo/contry/hongkong.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
@@ -89,7 +91,7 @@
                         <a class="btn" href="#">GO TO</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12">
                     <img src="photo/contry/nland.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
@@ -99,7 +101,7 @@
                         <a class="btn" href="#">GO TO</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12 ">
                     <img src="photo/contry/pexels-adhitya-andanu-1561863.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
@@ -109,7 +111,7 @@
                         <a class="btn" href="#">GO TO</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card col-lg-3 col-md-4 col-sm-6 col-12">
                     <img src="photo/contry/pexels-pixabay-460376.jpg" alt="">
                     <div class="card-info">
                         <h1>head</h1>
